frame/support/test/tests/construct_runtime_ui/undefined_call_part.stderr
error: `Pallet` does not have #[pallet::call] defined, perhaps you should remove `Call` from construct_runtime?
  --> $DIR/undefined_call_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
22 | / construct_runtime! {
23 | |     pub enum Runtime where
24 | |         Block = Block,
25 | |         NodeBlock = Block,
...  |
30 | |     }
31 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> $DIR/undefined_call_part.rs:28:11
   |
28 |         System: system::{Pallet, Call, Storage, Config, Event<T>},
   |                 ^^^^^^ use of undeclared crate or module `system`

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> $DIR/undefined_call_part.rs:22:1
   |
22 | / construct_runtime! {
23 | |     pub enum Runtime where
24 | |         Block = Block,
25 | |         NodeBlock = Block,
...  |
30 | |     }
31 | | }
   | |_^ not found in `system`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
   |
1  | use frame_system::RawOrigin;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> $DIR/undefined_call_part.rs:22:1
   |
22 | / construct_runtime! {
23 | |     pub enum Runtime where
24 | |         Block = Block,
25 | |         NodeBlock = Block,
...  |
30 | |     }
31 | | }
   | |_^ not found in `system`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
   |
1  | use crate::pallet::Pallet;
   |
1  | use frame_support_test::Pallet;
   |
1  | use frame_system::Pallet;
   |
1  | use test_pallet::Pallet;
   |

error[E0277]: the trait bound `Runtime: frame_system::Config` is not satisfied
  --> $DIR/undefined_call_part.rs:20:6
   |
8  |     pub trait Config: frame_system::Config {}
   |                       -------------------- required by this bound in `pallet::Config`
...
20 | impl pallet::Config for Runtime {}
   |      ^^^^^^^^^^^^^^ the trait `frame_system::Config` is not implemented for `Runtime`
